Fix collapsed annotation font light/dark difference.

--- a/h/css/common.scss
+++ b/h/css/common.scss
@@ -824,7 +824,6 @@ blockquote {
         margin-top: 0;
         margin-bottom: 0;
         font-size: 0.95em;
-        opacity: 0.8;
       }
 
       .indicators {
